Bug 74555 - FORMATTING: performance issue after font change
Summary: FORMATTING: performance issue after font change
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
4.2.0.4 release
Hardware: Other Windows (All)
: medium normal
Assignee: Kohei Yoshida
URL:
Whiteboard: BSA target:4.3.0 target:4.2.5
Keywords: possibleRegression, regression
: 78346 78560 (view as bug list)
Depends on:
Blocks:
 
Reported: 2014-02-05 10:31 UTC by venae76
Modified: 2015-12-15 22:10 UTC (History)
6 users (show)

See Also:
Crash report or crash signature:


Attachments
Sample file (11.55 KB, application/vnd.oasis.opendocument.spreadsheet)
2014-06-27 07:01 UTC, jmgigandet
Details

Note You need to log in before you can comment on or make changes to this bug.
Description venae76 2014-02-05 10:31:24 UTC
Problem description:
after changing the font for all the cells in the current sheet, the program becomes slow and almost unresponsive. There are no issues with changing the font for a single cells or changing the font size for all the cells.

Steps to reproduce:
1. Open a spreadsheet.
2. Select all the cells by clicking on the upper-left corner of the spreadsheet.
3. Change the font from the toolbar's drop-down menu.

Current behavior:
the font gets changed but the program slows down significantly.

Expected behavior:
font change without performance drops.
              
Operating System: Windows XP
Version: 4.2.0.4 release
Last worked in: 4.1.4.2 release
Comment 1 Harm van Bakel 2014-02-06 00:44:58 UTC
Having the same issue on 4.2.0, rc4 installed on Ubuntu 12.04
Comment 2 m_a_riosv 2014-02-07 23:46:18 UTC
Hi venae76, thanks for reporting.

Reproducible with:
Version: 4.2.0.4 Build ID: 05dceb5d363845f2cf968344d7adab8dcfb2ba71
Version: 4.2.1.0.0+ Build ID: 63950ec72806489b41c2109f5c3840dcf22f4c6c
TinderBox: Win-x86@42, Branch:libreoffice-4-2, Time: 2014-02-07_00:47:07
Version: 4.3.0.0.alpha0+ Build ID: ff5ad7e379315faa3f4afa009d23f34c7d231d9a
TinderBox: Win-x86@42, Branch:master, Time: 2014-02-03_23:44:46

Last working:
Version: 4.1.6.0.0+ Build ID: fd07d1758ee62eebfe95b157ba651de282feec0
Comment 3 Lukas Jelinek 2014-04-01 14:40:09 UTC
I can confirm this (4.2.2.1 on Windows Vista).

Additionally, undoing the font change doesn't remove the performance problem. The only way how to solve it is to close the document and reopen it.
Comment 4 Kohei Yoshida 2014-04-16 16:17:11 UTC
Anyone able to reproduce this on Linux?
Comment 5 Kohei Yoshida 2014-04-16 16:18:55 UTC
(In reply to comment #4)
> Anyone able to reproduce this on Linux?

Nevermind I just did.
Comment 6 Commit Notification 2014-04-16 18:50:32 UTC
Kohei Yoshida committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=947177a5cb79e03a415d9c3d1203420c874d2b35

fdo#74555: Avoid excessive calls to GetPreviewCellStyle().



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 7 Kohei Yoshida 2014-04-16 18:51:12 UTC
4.2: https://gerrit.libreoffice.org/9074
Comment 8 Commit Notification 2014-04-17 00:10:05 UTC
Kohei Yoshida committed a patch related to this issue.
It has been pushed to "libreoffice-4-2":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=9585ea8a3f10be60c42b671a07dfafd78f173e52&h=libreoffice-4-2

fdo#74555: Avoid excessive calls to GetPreviewCellStyle().


It will be available in LibreOffice 4.2.5.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 9 Kohei Yoshida 2014-04-17 00:10:38 UTC
Fixed.
Comment 10 m_a_riosv 2014-04-20 02:25:27 UTC
Thanks Kohei,
verified in:
Win7x64Ultimate
Version: 4.2.5.0.0+ Build ID: cc45204a7a286cef32fc7faf266dc2da235c1ae2
   TinderBox: Win-x86@42, Branch:libreoffice-4-2, Time: 2014-04-17_02:46:49
Version: 4.3.0.0.alpha0+ Build ID: 0ce6d9bcea7c37a7cb2c42e8393e2e20780bd171
   TinderBox: Win-x86@39, Branch:master, Time: 2014-04-17_00:11:33
Comment 11 Kohei Yoshida 2014-05-09 16:06:33 UTC
*** Bug 78346 has been marked as a duplicate of this bug. ***
Comment 12 Cor Nouws 2014-05-11 18:34:02 UTC
*** Bug 78560 has been marked as a duplicate of this bug. ***
Comment 13 Lukas Jelinek 2014-05-31 21:18:25 UTC
LibreOffice 4.3.0.0 Beta1:

This bug was resolved only partially, please re-open it. Calc is significantly faster but still very slow.

Steps to reproduce:
1. Create a new spreadsheet (the default font is se to Liberation Sans).
2. Fill for example 15 columns and 500 rows with some numbers of texts (e.g. write something into the first row's cells and fill down).
3. Select all cells (Ctrl-A).
4. Choose another font than the current (e.g. Arial).

Expected result:
Working with the spreadsheet is as fast as before (4).

Current result:
Working with the spreadsheet is much slower and CPU load is about 20-30 % even for simple moving the cursor inside the sheet. And additionally, undoing (4) has no effect to the speed.

I can compare the speed with 4.1.x versions which are not affected by this bug and those older versions are much more faster.
Comment 14 Kohei Yoshida 2014-05-31 21:20:32 UTC
(In reply to comment #13)
> LibreOffice 4.3.0.0 Beta1:
> 
> This bug was resolved only partially, please re-open it.

File a new bug please.
Comment 15 Cor Nouws 2014-06-22 16:20:10 UTC
(In reply to comment #14)
> File a new bug please.

created bug 80356 for that
Comment 16 jmgigandet 2014-06-27 07:01:55 UTC
Created attachment 101840 [details]
Sample file
Comment 17 jmgigandet 2014-06-27 07:09:17 UTC
Hi,
Problem's still here in 4.2.5
Open the sample file I provided. It's empty.
Navigating through cells is ok.
Press Ctrl+A to select all cells.
Press Ctrl+M.
Font will be changed to Calibri 11.
Now, navigating though cells is very slow, pressing Ctrl+Z to reverse won't change anything, you have to save and reload the doc to get back to a decent speed.
This was not the case in 4.1.x
Please re-open
Comment 18 Robinson Tryon (qubit) 2015-12-15 22:10:44 UTC
Migrating Whiteboard tags to Keywords: (PossibleRegression)
[NinjaEdit]