fdo#74555: Avoid excessive calls to GetPreviewCellStyle().

GetOptimalHeight() gets called *all the time* and is very performance
sensitive.  Let's not do an expensive operation such as GetPreviewCellStyle()
which slows down pretty much everything else after the non-default font is
applied.

Change-Id: I5d5b2e706dd5dd98173044642b98ccaedd9536f0